--- a/public/css/particles/particles.css
+++ b/public/css/particles/particles.css
@@ -12,14 +12,16 @@ body,html{
     height: 100%;
     top: 0;
     left: 0;
-    /*position: fixed;*/
+    position: fixed;
     z-index: 1;
 }
 
-.page-wrapper{
-    position: absolute;
+#page-wrapper{
+    position: relative;
     z-index: 2;
     width: 100vw;
+    margin: 0 auto;
+
     /*width: 60%;*/
     /*margin: 25px auto;*/
     /*background-color: white;*/
